src/app/common/components/ArticleDetails.scss
.article-details {
	display: flex;
	border: 1px solid gray;
	border-radius: 5px;
	overflow: hidden;
}
.article-details > .content {
	flex: 1 1 auto;
	padding: 5px;
	overflow: hidden;
	transition: padding-right 500ms;
}
.article-details.right-controls-visible > .content {
	padding-right: 0;
}
.article-details > .content > .top-row > .title {
	white-space: nowrap;
	overflow: hidden;
}
.article-details > .content > .top-row > .title > a {
	color: blue;
	text-decoration: underline;
}
.article-details > .content > .top-row > .title > .word-count {
	color: darkgray;
	font-size: 12px;
	margin: 0 3px;
	white-space: nowrap;
}
.article-details > .content > .top-row > .title > .tag {
	display: inline-block;
	white-space: nowrap;
	margin: 0 1px;
	color: lightgray;
	border: 1px dotted lightgray;
	border-radius: 3px;
	padding: 0 1px;
}
.article-details > .content > .top-row > .title > .tag:first-of-type {
	margin-left: 3px;
}
.article-details > .content > .top-row > .description {
	display: block;
	font-size: 11px;
	color: skyblue;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	margin: 1px 0;
}
.article-details > .content > .date-published {
	color: hotpink;
}
.article-details > .content > .source {
	color: mediumorchid;
}
.article-details > .controls {
	flex: 0 0 auto;
	position: relative;
	width: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	border-style: solid;
	border-color: gray;
	overflow: hidden;
	transition: width 500ms;
}
.article-details > .controls.left {
	border-right-width: 1px;
	left: -1px;
}
.article-details > .controls.right {
	border-left-width: 1px;
	right: -1px;
}
.article-details.left-controls-visible > .controls.left {
	width: 28px;
	left: 0;
}
.article-details.right-controls-visible > .controls.right {
	width: 28px;
	right: 0;
}
.article-details > .controls > .control {
	opacity: 0;
	cursor: pointer;
	transition: opacity 250ms;
}
.article-details.left-controls-visible > .controls.left > .control {
	opacity: 1;
}
.article-details.right-controls-visible > .controls.right > .control {
	opacity: 1;
}

